Fixed day alignment

--- a/Scruffy.WebApp/Components/Pages/Raid/Roles.razor.css
+++ b/Scruffy.WebApp/Components/Pages/Raid/Roles.razor.css
@@ -79,7 +79,8 @@
 
 .table-cell:first-child {
    width: auto;
-   text-align: left
+   text-align: left;
+   align-content: center;
 }
 
 .table-cell:last-child {
